# chat_digest

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: main.rs
src/addition/: addition.py
src/telegram/: bot.rs  digest.rs  mod.rs  scheduler.rs
src/telegram/db/: db.rs  digest.rs  message.rs  mod.rs  user.rs
src/text_analysis/: keywords.py  main.py  words_frequency.py
