[package]
name = "chat_summary"
version = "0.1.0"
authors = ["Stepan Naumov <s.s.naumov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
futures = "0.3.4"
dgraph = { version = "0.3.1", default-features = false, features = ["dgraph-1-1"] }
grpcio = { version = "0.4.7", features = ["openssl"] }
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
clokwerk = "0.3.0"
chrono = "0.4.11"
